# rime-add-words

./: LICENSE  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  main.rs
ui/: index.html  index.js  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  main.css  main.ts  tauri.ts  vue-main.ts
ui/src/components/: Main.vue
